Add examples of ranges::view::split

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,3 +23,11 @@ set_target_properties(ranges_count_if PROPERTIES
     CXX_STANDARD_REQUIRED YES
     CXX_EXTENSIONS NO
 )
+
+add_executable(ranges_split ranges_split.cpp)
+target_link_libraries(ranges_split PRIVATE range-v3)
+set_target_properties(ranges_split PROPERTIES
+    CXX_STANDARD 14
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+)
