Add Jonathan Boccara's examples.
Taken form its YouTube video: https://www.youtube.com/watch?v=4p21wBOplPQ

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,3 +31,11 @@ set_target_properties(ranges_split PROPERTIES
     CXX_STANDARD_REQUIRED YES
     CXX_EXTENSIONS NO
 )
+
+add_executable(ranges_introduction ranges_introduction.cpp)
+target_link_libraries(ranges_introduction PRIVATE range-v3)
+set_target_properties(ranges_introduction PROPERTIES
+    CXX_STANDARD 14
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+)
